# TwitterBot

./: Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: build_docker_image.yaml
data_ingestion/: S3TweetDfIO.py  TwitterBot.py  TwitterConnector.py  __init__.py
