[tool.poetry]
name = "twitterbot"
version = "0.1.0"
description = ""
authors = ["pengfei <liu.pengfei@hotmail.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.5"
tweepy = "^4.4.0"
pyarrow = "^6.0.0"
s3fs = "2021.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
